# qb-old

./: .dockerignore  .gitignore  AUTHORS  Cargo.toml  HEADER  README.md  docker-compose-dev.yaml  docker-compose.yaml  init-db.sql  nginx.conf
.github/workflows/: ci.yaml  deploy.yaml
crates/qb-api/: Cargo.toml
crates/qb-api/src/: lib.rs
crates/qb-backend/: Cargo.toml
crates/qb-backend/src/: auth.rs  main.rs  state.rs
crates/qb-entity/: Cargo.toml
crates/qb-entity/src/: lib.rs  prelude.rs  user.rs
crates/qb-migration/: Cargo.toml
crates/qb-migration/src/: lib.rs  m20220101_000001_create_table.rs  main.rs
qb-backend/: Cargo.toml  Dockerfile  README.md  dev.Dockerfile  dev.env
qb-backend/src/: auth.rs  handlers.rs  main.rs  prob.rs  state.rs
qb-backend/src/routes/: auth.rs  mod.rs
qb-entity/: Cargo.toml
qb-entity/src/: lib.rs  prelude.rs  user.rs
qb-frontend/: .gitignore  Dockerfile  dev.Dockerfile  package-lock.json  package.json  svelte.config.js  vite.config.ts
qb-frontend/src/: app.css  app.d.ts
qb-frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
qb-frontend/src/routes/signin/: +page.svelte
qb-frontend/src/routes/signup/: +page.svelte
qb-migration/: Cargo.toml  README.md
qb-migration/src/: lib.rs  m20220101_000001_create_table.rs  main.rs
qb-proxy/: Dockerfile  backend.conf  dev.Dockerfile  nginx-dev.conf  nginx.conf
scripts/: header.py
sites/quixbyte.org/: README.md  package-lock.json  package.json
sites/quixbyte.org/src/: app.css  app.html
sites/quixbyte.org/src/routes/: +layout.svelte  +page.svelte
