# SPDX-License-Identifier: AGPL-3.0-only

# ████████████████████████████████████████████████
# █─▄▄▄─█▄─██─▄█▄─▄█▄─▀─▄█▄─▄─▀█▄─█─▄█─▄─▄─█▄─▄▄─█
# █─██▀─██─██─███─███▀─▀███─▄─▀██▄─▄████─████─▄█▀█
# ▀───▄▄▀▀▄▄▄▄▀▀▄▄▄▀▄▄█▄▄▀▄▄▄▄▀▀▀▄▄▄▀▀▀▄▄▄▀▀▄▄▄▄▄▀
# https://github.com/QuixByte/qb/blob/main/LICENSE
# 
# (c) Copyright 2023 The QuixByte Authors

[package]
name = "qb-backend"
version.workspace = true
edition.workspace = true
authors = ["Lucas Birkert <lucasbirkert@gmail.com>"]

[dependencies]
# First-hand dependencies
qb-entity = { path = "../qb-entity/" }
qb-migration = { path = "../qb-migration/" }

# Second-hand dependencies
actix-web = "4.3.1"
dotenv = "0.15.0"
r2d2 = "0.8.10"
redis = { version = "0.23.2", features = [ "r2d2" ] }
sea-orm = { version = "0.12.2", features = [ "runtime-tokio-rustls", "macros" ]}
log = "0.4.20"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-actix-web = "0.7.6"
tracing-unwrap = "0.10.0"
argon2 = "0.5.1"
serde = { version = "1.0.183", features = [ "derive" ] }
http-api-problem = { version = "0.57.0", features = [ "actix-web" ] }
rand_core = "0.6.4"
lazy_static = "1.4.0"
rand = "0.8.5"
serde_json = "1.0.105"

[features]
default = ["postgres"]
postgres = ["sea-orm/sqlx-postgres"]
mysql = ["sea-orm/sqlx-mysql"]
sqlite = ["sea-orm/sqlx-sqlite"]
