# SPDX-License-Identifier: AGPL-3.0-only

# ████████████████████████████████████████████████
# █─▄▄▄─█▄─██─▄█▄─▄█▄─▀─▄█▄─▄─▀█▄─█─▄█─▄─▄─█▄─▄▄─█
# █─██▀─██─██─███─███▀─▀███─▄─▀██▄─▄████─████─▄█▀█
# ▀───▄▄▀▀▄▄▄▄▀▀▄▄▄▀▄▄█▄▄▀▄▄▄▄▀▀▀▄▄▄▀▀▀▄▄▄▀▀▄▄▄▄▄▀
# https://github.com/QuixByte/qb/blob/main/LICENSE

# (c) Copyright 2023 The QuixByte Authors

[package]
name = "qb-migration"
version.workspace = true
edition.workspace = true
authors = ["Lucas Birkert <lucasbirkert@gmail.com>"]

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm-migration = { version = "0.12.2", features = ["runtime-tokio-rustls"]}

[features]
default = ["postgres"]
postgres = ["sea-orm-migration/sqlx-postgres"]
mysql = ["sea-orm-migration/sqlx-mysql"]
sqlite = ["sea-orm-migration/sqlx-sqlite"]

